# LowLevelProgramming2021

./: CMakeLists.txt
Lab1/: Lab1_Turing.docx  Lab1_Turing.tur
Lab2/: Graph.c  Krivitskii_Lab5.docx  graph.c  graph.h  math.c  math.h  test.c  test.h
Lab2/main/: main.h
Lab3/: main.s  start.s
Lab4/: CMakeLists.txt  Makefile  a.ds  a.out  bSort.c  bSort.h  bSort.i  bSort.s  main.c  main.i  main.s  swap.c  swap.h
Lab5/: graph.c  test.c
Lab5/data/: input.txt  output.txt
Lab5/main/: main.c
